hard-gists/1918389/run.log
=== Docker Run Log for 1918389 ===
Started at: Mi 29. Okt 12:34:08 CET 2025

[2025-10-29 12:34:09] START: Running container for 1918389
[2025-10-29 12:34:09] SUCCESS: Container 8b9c95c7ab84cb7f83c3f6a498728dc53b091df670f6368a0e0361c8644d1987 started for 1918389
=== Container logs for 1918389 ===
  File "/snippet.py", line 13
    print "Taking snapshot: %s" % filename
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1918389 ===
[2025-10-29 12:34:11] INFO: Container 8b9c95c7ab84cb7f83c3f6a498728dc53b091df670f6368a0e0361c8644d1987 has stopped
